<resources>
    <string name="app_name">AboutMe</string>
    <string name="my_name">Yap Hui Wen</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="profile_desc">
        Education:
        \n\tSJK Kampung Baru Ampang, Selangor\n
        \n\tSMK Pandan Mewah, Selangor\n
        \n\tTAR UC, Kuala Lumpur\n
        \nWorking Experiences:\n
        \n\tNestle\n
        \n\tITEX2019\n
    </string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="name">Name</string>
    <string name="Done">done</string>
</resources>
